--- a/resources/view/index.html
+++ b/resources/view/index.html
@@ -20,22 +20,23 @@
                     Action
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <li><a class="dropdown-item" href="#" id="loadFromFile">Load data from file</a></li>
-                    <li><a class="dropdown-item" href="#" id="openInputModal">Input & add to the head</a></li>
-                    <li><a class="dropdown-item" href="#">Display data</a></li>
-                    <li><a class="dropdown-item" href="#">Save train list to file</a></li>
-                    <li><a class="dropdown-item" href="#" id="openSearchModal">Search by tcode</a></li>
-                    <li><a class="dropdown-item" href="#" id="openDeleteModal">Delete by tcode</a></li>
-                    <li><a class="dropdown-item" href="#">Sort by tcode</a></li>
-                    <li><a class="dropdown-item" href="#" id="openAddAfterModal">Add after position k</a></li>
-                    <li><a class="dropdown-item" href="#" id="openDeleteBeforeModal">Delete the node before the node having
+                    <li><a class="dropdown-item" href="#" id="loadFromFile">1.1 Load data from file</a></li>
+                    <li><a class="dropdown-item" href="#" id="openInputModal">1.2 Input & add to the head</a></li>
+                    <li><a class="dropdown-item" href="#" id="openDisplayDataModal">1.3 Display data</a></li>
+                    <li><a class="dropdown-item" href="#" id="openSaveFile">1.4 Save train list to file</a></li>
+                    <li><a class="dropdown-item" href="#" id="openSearchModal">1.5 Search by tcode</a></li>
+                    <li><a class="dropdown-item" href="#" id="openDeleteModal">1.6 Delete by tcode</a></li>
+                    <li><a class="dropdown-item" href="#" id="openSortByTcode">1.7 Sort by tcode</a></li>
+                    <li><a class="dropdown-item" href="#" id="openAddAfterModal">1.8 Add after position k</a></li>
+                    <li><a class="dropdown-item" href="#" id="openDeleteBeforeModal">1.9 Delete the node before the node
+                            having
                             tcode = xCode</a></li>
                 </ul>
             </div>
         </div>
 
         <!-- Train List -->
-        <table class="table mt-3">
+        <table class="table mt-3" id="trainListTable">
             <thead>
                 <tr>
                     <th scope="col">TCode</th>
@@ -67,7 +68,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-primary" onclick="submitFile()">Save changes</button>
                 </div>
             </div>
         </div>
@@ -107,10 +108,6 @@
                         <div class="mb-3">
                             <label for="departPlace" class="form-label">Depart Place</label>
                             <input type="text" class="form-control" id="departPlace" name="departPlace">
-                        </div>
-                        <div class="mb-3">
-                            <label for="availableSeat" class="form-label">Available Seat</label>
-                            <input type="text" class="form-control" id="availableSeat" name="availableSeat">
                         </div>
                         <!-- Add other input fields for Seat, Booked, Depart Time, Depart Place, Available Seat -->
                     </form>
@@ -189,32 +186,28 @@
                             <input type="number" class="form-control" id="positionK" name="positionK" min="1">
                         </div>
                         <div class="mb-3">
-                            <label for="tcode" class="form-label">Tcode</label>
-                            <input type="text" class="form-control" id="tcode" name="tcode">
+                            <label for="tcodeK" class="form-label">Tcode</label>
+                            <input type="text" class="form-control" id="tcodeK" name="tcodeK">
                         </div>
                         <div class="mb-3">
-                            <label for="trainName" class="form-label">Train Name</label>
-                            <input type="text" class="form-control" id="trainName" name="trainName">
+                            <label for="trainNameK" class="form-label">Train Name</label>
+                            <input type="text" class="form-control" id="trainNameK" name="trainNameK">
                         </div>
                         <div class="mb-3">
-                            <label for="seat" class="form-label">Seat</label>
-                            <input type="text" class="form-control" id="seat" name="seat">
+                            <label for="seatK" class="form-label">Seat</label>
+                            <input type="text" class="form-control" id="seatK" name="seatK">
                         </div>
                         <div class="mb-3">
-                            <label for="booked" class="form-label">Booked</label>
-                            <input type="text" class="form-control" id="booked" name="booked">
+                            <label for="bookedK" class="form-label">Booked</label>
+                            <input type="text" class="form-control" id="bookedK" name="bookedK">
                         </div>
                         <div class="mb-3">
-                            <label for="departTime" class="form-label">Depart Time</label>
-                            <input type="text" class="form-control" id="departTime" name="departTime">
+                            <label for="departTimeK" class="form-label">Depart Time</label>
+                            <input type="text" class="form-control" id="departTimeK" name="departTimeK">
                         </div>
                         <div class="mb-3">
-                            <label for="departPlace" class="form-label">Depart Place</label>
-                            <input type="text" class="form-control" id="departPlace" name="departPlace">
-                        </div>
-                        <div class="mb-3">
-                            <label for="availableSeat" class="form-label">Available Seat</label>
-                            <input type="text" class="form-control" id="availableSeat" name="availableSeat">
+                            <label for="departPlaceK" class="form-label">Depart Place</label>
+                            <input type="text" class="form-control" id="departPlaceK" name="departPlaceK">
                         </div>
                     </form>
                 </div>
@@ -225,6 +218,27 @@
             </div>
         </div>
     </div>
+
+    <!-- Modal for saving file -->
+    <div class="modal fade" id="saveFileModal" tabindex="-1" aria-labelledby="saveFileModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="saveFileModalLabel">Save File</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <label for="fileName">File Name:</label>
+                    <input type="text" id="fileName" class="form-control">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="saveToFileBtn">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <!-- Modal del before tCode = xCode-->
     <div class="modal fade" id="deleteBeforeModal" tabindex="-1" aria-labelledby="deleteBeforeModalLabel"
@@ -252,8 +266,10 @@
         </div>
     </div>
 
+    <script src="../js/socketClient.js"></script>
     <script src="../js/train.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
