--- a/resources/view/customer.html
+++ b/resources/view/customer.html
@@ -100,6 +100,76 @@
         </div>
     </div>
 
+    <!-- Modal for saving file -->
+    <div class="modal fade" id="saveFileModal" tabindex="-1" aria-labelledby="saveFileModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="saveFileModalLabel">Save File</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <label for="fileName">File Name:</label>
+                    <input type="text" id="fileName" class="form-control">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="saveToFileBtn">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal search by ccode -->
+    <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="searchModalLabel">Search by Tcode</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Form to input tcode -->
+                    <form id="searchForm">
+                        <div class="mb-3">
+                            <label for="searchCcode" class="form-label">Enter Ccode:</label>
+                            <input type="text" class="form-control" id="searchCcode" name="searchCcode">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="submitSearch">Search</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal delete by tcode -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteModalLabel">Delete by Tcode</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Form to input tcode -->
+                    <form id="deleteForm">
+                        <div class="mb-3">
+                            <label for="deleteCcode" class="form-label">Enter Ccode:</label>
+                            <input type="text" class="form-control" id="deleteCcode" name="deleteCcode">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger" id="submitDelete">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="../js/socketClient.js"></script>
     <script src="../js/cus.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
