--- a/resources/view/train.html
+++ b/resources/view/train.html
@@ -4,17 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Train List</title>
+    <title>Train</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+    <div class="notice"></div>
     <div class="container mt-5">
         <div class="d-flex align-items-center w-100 justify-content-between">
             <h2 class="mr-3">Train List</h2>
 
             <!-- Dropdown menu -->
             <div class="dropdown">
+                <a href="./train-booking.html" target="_blank" rel="noopener noreferrer" class="btn btn-success"
+                    id="customerButton">Booking</a>
+                <a href="./customer.html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary"
+                    id="trainButton">Customer</a>
+
                 <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton"
                     data-bs-toggle="dropdown" aria-expanded="false">
                     Action
