Commit to pull code

--- a/resources/view/index.html
+++ b/resources/view/index.html
@@ -28,7 +28,8 @@
                     <li><a class="dropdown-item" href="#" id="openDeleteModal">Delete by tcode</a></li>
                     <li><a class="dropdown-item" href="#">Sort by tcode</a></li>
                     <li><a class="dropdown-item" href="#" id="openAddAfterModal">Add after position k</a></li>
-                    <li><a class="dropdown-item" href="#" id="openDeleteBeforeModal">Delete the node before the node having
+                    <li><a class="dropdown-item" href="#" id="openDeleteBeforeModal">Delete the node before the node
+                            having
                             tcode = xCode</a></li>
                 </ul>
             </div>
